[tool.poetry]
name = "simpllex_brain_games"
version = "0.2.0"
description = ""
authors = ["vera <marinenskaya.vera@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

